--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,10 +7,18 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+main{
+  height:auto;
+}
 body {
   background: #fff;
   color: #666666;
   font-family: "Open Sans", sans-serif;
+}
+.btn-get-started{
+  background: #03C4EB;
+  border: 2px solid #03C4EB;
+  color: #fff;
 }
 
 a {
@@ -95,6 +103,10 @@ h1, h2, h3, h4, h5, h6 {
     background-attachment: fixed;
   }
 }
+.tablePic{
+  width:50px;
+  height: 50px;
+}
 
 #hero .hero-logo {
   margin: 20px;
@@ -112,7 +124,20 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   vertical-align: middle;
 }
-
+#weatherApi{
+  margin-left: 75%;
+}
+.navPerso{
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  margin-top: 2%;
+}
+.cardClient {
+  margin-top: 2%!important;
+  width: 50% !important;
+  margin: auto;
+}
 #hero h1 {
   margin: 30px 0 10px 0;
   font-weight: 700;
